inline-flex remove 4px

--- a/index.html
+++ b/index.html
@@ -357,22 +357,22 @@
             <h3 class="join-title">ПРИЄДНУЙТЕСЬ</h3>
             <ul class="list">
               <li class="social-item">
-                <svg class="social-icon">
+                <svg class="social-icon" width="44px" height="44px">
                   <use href="./images/icons.svg#Ellipseinsta2"></use>
                 </svg>
               </li>
               <li class="social-item">
-                <svg class="social-icon">
+                <svg class="social-icon" width="44px" height="44px">
                   <use href="./images/icons.svg#Ellipsetwitter2"></use>
                 </svg>
               </li>
               <li class="social-item">
-                <svg class="social-icon">
+                <svg class="social-icon" width="44px" height="44px">
                   <use href="./images/icons.svg#Ellipsefacebook2"></use>
                 </svg>
               </li>
               <li class="social-item">
-                <svg class="social-icon">
+                <svg class="social-icon" width="44px" height="44px">
                   <use href="./images/icons.svg#Ellipsein2"></use>
                 </svg>
               </li>
