--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -67,34 +67,42 @@
           <h2 class="section-title visually-hidden">Особливості</h2>
           <ul class="list">
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/icons.svg#antenna-1"></use>
-              </svg>
+              <div class="box">
+                <svg class="item-icon" width="70px" height="70px">
+                  <use href="./images/icons.svg#antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/icons.svg#clock-1"></use>
-              </svg>
+              <div class="box">
+                <svg class="item-icon" width="70px" height="70px">
+                  <use href="./images/icons.svg#clock-1"></use>
+                </svg>
+              </div>
               <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/icons.svg#diagram-1"></use>
-              </svg>
+              <div class="box">
+                <svg class="item-icon" width="70px" height="70px">
+                  <use href="./images/icons.svg#clock-1"></use>
+                </svg>
+              </div>
               <h3 class="title">ПЛАНУВАННЯ</h3>
               <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="item">
-              <svg class="item-icon">
-                <use class="pic" href="./images/icons.svg#astronaut-1"></use>
-              </svg>
+              <div class="box">
+                <svg class="item-icon" width="70px" height="70px">
+                  <use href="./images/icons.svg#astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -300,34 +308,46 @@
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="list">
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/icons.svg#Logo1"></use>
-              </svg>
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106px" height="60px">
+                  <use href="./images/icons.svg#Logo1"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/icons.svg#Logo2"></use>
-              </svg>
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106px" height="60px">
+                  <use href="./images/icons.svg#Logo2"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/icons.svg#Logo3"></use>
-              </svg>
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106px" height="60px">
+                  <use href="./images/icons.svg#Logo3"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/icons.svg#Logo4"></use>
-              </svg>
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106px" height="60px">
+                  <use href="./images/icons.svg#Logo4"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/icons.svg#Logo5"></use>
-              </svg>
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106px" height="60px">
+                  <use href="./images/icons.svg#Logo5"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="item-icon">
-                <use href="./images/icons.svg#Logo6"></use>
-              </svg>
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106px" height="60px">
+                  <use href="./images/icons.svg#Logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -337,7 +357,7 @@
     <footer class="footer">
       <div class="container">
         <div class="list">
-          <div class="marg">
+          <div class="flex-item">
             <a href="./index.html" class="logo"><span class="accent-logo">Web</span>Studio</a>
             <address>
               <ul class="address list">
@@ -349,32 +369,42 @@
                 <li class="item">
                   <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
-                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item">
+                  <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                </li>
               </ul>
             </address>
           </div>
-          <div class="join marg">
+          <div class="flex-item">
             <h3 class="join-title">ПРИЄДНУЙТЕСЬ</h3>
             <ul class="list">
               <li class="social-item">
-                <svg class="social-icon" width="44px" height="44px">
-                  <use href="./images/icons.svg#Ellipseinsta2"></use>
-                </svg>
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="44px" height="44px">
+                    <use href="./images/icons.svg#Ellipseinsta2"></use>
+                  </svg>
+                </a>
               </li>
               <li class="social-item">
-                <svg class="social-icon" width="44px" height="44px">
-                  <use href="./images/icons.svg#Ellipsetwitter2"></use>
-                </svg>
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="44px" height="44px">
+                    <use href="./images/icons.svg#Ellipsetwitter2"></use>
+                  </svg>
+                </a>
               </li>
               <li class="social-item">
-                <svg class="social-icon" width="44px" height="44px">
-                  <use href="./images/icons.svg#Ellipsefacebook2"></use>
-                </svg>
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="44px" height="44px">
+                    <use href="./images/icons.svg#Ellipsefacebook2"></use>
+                  </svg>
+                </a>
               </li>
               <li class="social-item">
-                <svg class="social-icon" width="44px" height="44px">
-                  <use href="./images/icons.svg#Ellipsein2"></use>
-                </svg>
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="44px" height="44px">
+                    <use href="./images/icons.svg#Ellipsein2"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
