--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,8 +27,8 @@
 
         <nav class="site-nav">
           <ul class="list">
-            <li class="item"><a href="./index.html" class="link current">Студія</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li class="item"><a href="./index.html" class="link">Студія</a></li>
+            <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
             <li class="item"><a href="" class="link">Контакти</a></li>
           </ul>
         </nav>
@@ -69,67 +69,85 @@
 
           <ul class="flex-container list">
             <li class="flex-item">
-              <img class="pic" src="./images/img8.jpg" alt="фото1" width="370" height="294" />
-              <div class="flex-words">
-                <h2 class="title">Технокряк</h2>
-                <p class="text">Веб-сайт</p>
-              </div>
+              <a href="" class="card-link">
+                <img class="pic" src="./images/img8.jpg" alt="фото1" width="370" height="294" />
+                <div class="flex-words">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="flex-item">
-              <img class="pic" src="./images/img9.jpg" alt="фото2" width="370" height="294" />
-              <div class="flex-words">
-                <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                <p class="text">Дизайн</p>
-              </div>
+              <a href="" class="card-link">
+                <img class="pic" src="./images/img9.jpg" alt="фото2" width="370" height="294" />
+                <div class="flex-words">
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="flex-item">
-              <img class="pic" src="./images/img10.jpg" alt="фото3" width="370" height="294" />
-              <div class="flex-words">
-                <h2 class="title">Ресторан Seafood</h2>
-                <p class="text">Додаток</p>
-              </div>
+              <a href="" class="card-link">
+                <img class="pic" src="./images/img10.jpg" alt="фото3" width="370" height="294" />
+                <div class="flex-words">
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="flex-item">
-              <img class="pic" src="./images/img11.jpg" alt="фото4" width="370" height="294" />
-              <div class="flex-words">
-                <h2 class="title">Проєкт Prime</h2>
-                <p class="text">Маркетинг</p>
-              </div>
+              <a href="" class="card-link">
+                <img class="pic" src="./images/img11.jpg" alt="фото4" width="370" height="294" />
+                <div class="flex-words">
+                  <h2 class="title">Проєкт Prime</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="flex-item">
-              <img class="pic" src="./images/img12.jpg" alt="фото5" width="370" height="294" />
-              <div class="flex-words">
-                <h2 class="title">Проєкт Boxes</h2>
-                <p class="text">Додаток</p>
-              </div>
+              <a href="" class="card-link">
+                <img class="pic" src="./images/img12.jpg" alt="фото5" width="370" height="294" />
+                <div class="flex-words">
+                  <h2 class="title">Проєкт Boxes</h2>
+                  <p class="text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="flex-item">
-              <img class="pic" src="./images/img13.jpg" alt="фото6" width="370" height="294" />
-              <div class="flex-words">
-                <h2 class="title">Inspiration has no Borders</h2>
-                <p class="text">Веб-сайт</p>
-              </div>
+              <a href="" class="card-link">
+                <img class="pic" src="./images/img13.jpg" alt="фото6" width="370" height="294" />
+                <div class="flex-words">
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="flex-item">
-              <img class="pic" src="./images/img14.jpg" alt="фото7" width="370" height="294" />
-              <div class="flex-words">
-                <h2 class="title">Видання Limited Edition</h2>
-                <p class="text">Дизайн</p>
-              </div>
+              <a href="" class="card-link">
+                <img class="pic" src="./images/img14.jpg" alt="фото7" width="370" height="294" />
+                <div class="flex-words">
+                  <h2 class="title">Видання Limited Edition</h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="flex-item">
-              <img class="pic" src="./images/img15.jpg" alt="фото8" width="370" height="294" />
-              <div class="flex-words">
-                <h2 class="title">Проєкт LAB</h2>
-                <p class="text">Маркетинг</p>
-              </div>
+              <a href="" class="card-link">
+                <img class="pic" src="./images/img15.jpg" alt="фото8" width="370" height="294" />
+                <div class="flex-words">
+                  <h2 class="title">Проєкт LAB</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="flex-item">
-              <img class="pic" src="./images/img16.jpg" alt="фото9" width="370" height="294" />
-              <div class="flex-words">
-                <h2 class="title">Growing Business</h2>
-                <p class="text">Додаток</p>
-              </div>
+              <a href="" class="card-link">
+                <img class="pic" src="./images/img16.jpg" alt="фото9" width="370" height="294" />
+                <div class="flex-words">
+                  <h2 class="title">Growing Business</h2>
+                  <p class="text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -139,7 +157,7 @@
     <footer class="footer">
       <div class="container">
         <div class="list">
-          <div class="marg">
+          <div class="flex-item">
             <a href="./index.html" class="logo"><span class="accent-logo">Web</span>Studio</a>
             <address>
               <ul class="address list">
@@ -151,32 +169,42 @@
                 <li class="item">
                   <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
-                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item">
+                  <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                </li>
               </ul>
             </address>
           </div>
-          <div class="join marg">
+          <div class="flex-item">
             <h3 class="join-title">ПРИЄДНУЙТЕСЬ</h3>
             <ul class="list">
               <li class="social-item">
-                <svg class="social-icon">
-                  <use href="./images/icons.svg#Ellipseinsta2"></use>
-                </svg>
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="44px" height="44px">
+                    <use href="./images/icons.svg#Ellipseinsta2"></use>
+                  </svg>
+                </a>
               </li>
               <li class="social-item">
-                <svg class="social-icon">
-                  <use href="./images/icons.svg#Ellipsetwitter2"></use>
-                </svg>
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="44px" height="44px">
+                    <use href="./images/icons.svg#Ellipsetwitter2"></use>
+                  </svg>
+                </a>
               </li>
               <li class="social-item">
-                <svg class="social-icon">
-                  <use href="./images/icons.svg#Ellipsefacebook2"></use>
-                </svg>
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="44px" height="44px">
+                    <use href="./images/icons.svg#Ellipsefacebook2"></use>
+                  </svg>
+                </a>
               </li>
               <li class="social-item">
-                <svg class="social-icon">
-                  <use href="./images/icons.svg#Ellipsein2"></use>
-                </svg>
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="44px" height="44px">
+                    <use href="./images/icons.svg#Ellipsein2"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
